deps/v8/test/message/fail/function-sent-escaped.out
*%(basename)s:8: SyntaxError: 'function.sent' must not contain escaped characters
  return function.s\u0065nt;
         ^^^^^^^^^^^^^^^^^^
SyntaxError: 'function.sent' must not contain escaped characters
